--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
+  "functions": {
+    "api/*": {
+      "maxDuration": 30
+    }
+  }
 }
